feat: add follow status to user search results
- Include current user follow relationship in user details response
- Update user search service to accept current user id
- Add following status check using FollowRepository